--- a/login/login-user.html
+++ b/login/login-user.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Liverpool FC</title>
+    <title>Sign In - Liverpool FC</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/style.css">
     <script src="../assets/js/script.js" defer></script>
 </head>
 <body>
     <div class="container">
       <img src="../assets/images/logo-liverpool.png" alt="LFC Logo" class="logo">
-      <h1>Hi, Kopites! Join Us Now</h1>
+      <h1>Hi, Kopites! Sign In Now</h1>
       <form class="form">
-        <input type="email" placeholder="Email" required>
         <input type="text" placeholder="Username" required>
         <input type="password" placeholder="Password" required>
-        <p>Already have an account? <a href="#">Sign in now!</a></p>
-        <button type="submit" class="join-btn">Join Now</button>
+        <p>Not Registered Yet? <a href="../signup/signup-user.html">Sign Up now!</a></p>
+        <button type="submit" class="join-btn">Sign In</button>
       </form>
-      <a href="#" class="admin-link">Join As Admin</a>
+      <a href="../login/login-admin.html" class="admin-link">Sign In As Admin</a>
     </div>
   </body>
   </html>
