--- a/login-user.html
+++ b/login-user.html
@@ -13,7 +13,7 @@
     <div class="container">
       <img src="../assets/images/logo-liverpool.png" alt="LFC Logo" class="logo">
       <h1>Hi, Kopites! Sign In Now</h1>
-      <form class="form">
+      <form class="form" action="POST">
         <input type="text" placeholder="Username" required>
         <input type="password" placeholder="Password" required>
         <p>Not Registered Yet? <a href="../signup/signup-user.html">Sign Up now!</a></p>
