--- a/login/login-admin.html
+++ b/login/login-admin.html
@@ -13,7 +13,7 @@
     <div class="container">
       <img src="../assets/images/logo-liverpool.png" alt="LFC Logo" class="logo">
       <h1>Sign In As Admin</h1>
-      <form class="form">
+      <form class="form" method="POST" action="signin-admin.php">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
         <p>Not Registered Yet? <a href="../signup/signup-admin.html">Sign Up now!</a></p>
