--- a/login/login-user.html
+++ b/login/login-user.html
@@ -16,7 +16,7 @@
       <form class="form" method="POST" action="signin.php">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
-        <p>Not Registered Yet? <a href="register.php">Sign Up now!</a></p>
+        <p>Not Registered Yet? <a href="../signup/signup-user.html">Sign Up now!</a></p>
         <button type="submit" name="signin-btn" class="join-btn">Sign In</button>
       </form>
       <a href="../login/login-admin.html" class="admin-link">Sign In As Admin</a>
